--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <center>
         
   
-        <h1>Sketch Identification
+        
+        <h1>Quick Draw</h1>
             <span>
         <button id="show_sketch" class="btn btn-info" data-toggle="modal" data-target="#myModal">Show Sketch</button>
             </span>
           <button id="show_sketch" class="btn btn-info" data-toggle="modal" data-target="#myModal">Show Sketch</button>
-        </h1>
         <p id="your_sketch">Your Sketch : </p>
         <br>
         <p id="confidence">Confidence : </p>
